--- a/2-html/08_tablas.html
+++ b/2-html/08_tablas.html
@@ -26,6 +26,42 @@
     </tr>
 
 </table>
+<br><br>
+<table border="1" widht="460px">
+	<thead>
+	<tr>
+        <th>nombre</th>
+        <th>apellido</th>
+        <th>especialidad</th>
+	</tr>
+    </thead>
+    <tbody>
+    	<tr>
+    		<td>hugo</td>
+    		<td>ruiz</td>
+    		<td>adsi</td>
+    	</tr>
+    	<tr>
+    		<td>paco</td>
+    		<td>cardona</td>
+    		<td>electricidad</td>
+    	</tr>
+    	<tr>
+    		<td>jorge</td>
+    		<td>loaiza</td>
+    		<td>biomedica</td>
+    	</tr>
+    </tbody>
+    <tfoot>
+    	<tr>
+    		<td colspan="3"> <center> datos aprendices 2019</center> </td>
+        </tr>
+    </tfoot>
+
+	<thead></thead>
+	<tbody></tbody>
+	<tfoot></tfoot>
+</table>
 
 </body>
 </html>
