--- a/4-pug/html/02-atributos.html
+++ b/4-pug/html/02-atributos.html
@@ -9,4 +9,7 @@ html(lang="UTF-8")
 					a(href='http://maps.google.com', target="blank", class="link") google maps
 				li
 					a(href="http://translate.google.com" target="blank", class="link") google translate
+					//atributos multi linea
+					li
+						a(href="http://images.google.com",target="blank", class="link") google images
 
