--- a/5-css2.1/23-fondos.html
+++ b/5-css2.1/23-fondos.html
@@ -7,7 +7,7 @@
     <title>fondos</title>
     <style>
         body {
-            background: url(imags/as.png)
+            background: url(imags/carro.jpeg)
         }
         h1, h3,h4 {
             text-align: center;
@@ -15,7 +15,7 @@
         section.bg {
             border: 2px solid #333;
             height: 400px;
-            margin: 20px auto;
+            margin: 30px auto;
             width: 800px;
 
         }
