--- a/sass/sass/05-importar.html
+++ b/sass/sass/05-importar.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>05-importar</title>
     <link rel="stylesheet" href="css/master.css">
-
+    <link rel="stylesheet" href="css/05-importar.css">
 </head>
 <body>
     <main>
