--- a/sass/sass/04-variables.html
+++ b/sass/sass/04-variables.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>04-variables</title>
     <link rel="stylesheet" href="css/master.css">
-    <link rel="stylesheet" href="css/04-variables.scss">
+    <link rel="stylesheet" href="css/04-variables.css">
 </head>
 <body>
     <main>
